--- a/css/style.css
+++ b/css/style.css
@@ -2,270 +2,397 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
-  font-family: 'Poppins', sans-serif;
-  font-size: 62.5%; }
-  @media (max-width: 768px) {
-    body {
-      overflow-x: hidden; } }
+  font-family: "Poppins", sans-serif;
+  font-size: 62.5%;
+}
+
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+}
 
 h2 {
-  font-size: 2.7rem; }
+  font-size: 2.7rem;
+}
 
 h3 {
-  font-size: 2.3rem; }
+  font-size: 2.3rem;
+}
 
 p {
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 .btn {
   color: #fff;
-  background: #21d397; }
+  background: #21d397;
+}
 
 img {
-  width: 100%; }
+  width: 100%;
+}
 
 header {
-  background: url("../img/wave.png") no-repeat center center/cover; }
-  header .navegation {
-    padding: 20px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.05); }
-    header .navegation .navbar {
-      width: 80%;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      overflow: hidden; }
-      header .navegation .navbar .nav-logo {
-        flex-basis: 30%;
-        z-index: 2; }
-        header .navegation .navbar .nav-logo a {
-          color: #fff;
-          font-size: 25px; }
-          header .navegation .navbar .nav-logo a span {
-            color: #21d397; }
-      header .navegation .navbar .nav-links {
-        flex-basis: 60%;
-        display: flex;
-        justify-content: flex-end; }
-        header .navegation .navbar .nav-links li.nav-item a {
-          text-transform: uppercase;
-          color: #fff;
-          font-size: 15px;
-          margin-right: 35px; }
-          @media (max-width: 768px) {
-            header .navegation .navbar .nav-links li.nav-item a {
-              margin-right: 0px; } }
-        @media (max-width: 768px) {
-          header .navegation .navbar .nav-links li.nav-item {
-            opacity: 0; } }
-        @media (max-width: 768px) {
-          header .navegation .navbar .nav-links {
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100vh;
-            background-color: #45328a;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            width: 50%;
-            transform: translateX(-100%);
-            transition: transform 0.5s ease-in;
-            z-index: 1; } }
-      header .navegation .navbar a.btn {
-        color: #fff;
-        font-size: 12px;
-        font-weight: 600;
-        text-transform: uppercase;
-        line-height: 33px;
-        padding: 0 20px;
-        min-width: 100px;
-        height: 35px;
-        border-radius: 5px;
-        border: 1px solid #fff;
-        letter-spacing: 1px;
-        transition: all .5s ease; }
-        header .navegation .navbar a.btn:hover {
-          background-color: #7450fe; }
-        @media (max-width: 768px) {
-          header .navegation .navbar a.btn {
-            display: none; } }
-      header .navegation .navbar .nav-active {
-        transform: translateX(0%); }
-      header .navegation .navbar .burger {
-        display: none; }
-        header .navegation .navbar .burger div {
-          width: 25px;
-          height: 3px;
-          margin: 3px;
-          background-color: #fff;
-          transition: all .3s ease-in-out; }
-        @media (max-width: 768px) {
-          header .navegation .navbar .burger {
-            cursor: pointer;
-            display: block; } }
-      header .navegation .navbar .toggle .line1 {
-        transform: rotate(-45deg) translate(-6px, 3px); }
-      header .navegation .navbar .toggle .line2 {
-        opacity: 0; }
-      header .navegation .navbar .toggle .line3 {
-        transform: rotate(45deg) translate(-5px, -3px); }
-  header .site-header {
-    padding-top: 30px;
-    width: 80%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  background: url("../img/wave.png") no-repeat center center/cover;
+}
+
+header .navegation {
+  padding: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+header .navegation .navbar {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  overflow: hidden;
+}
+
+header .navegation .navbar .nav-logo {
+  flex-basis: 30%;
+  z-index: 2;
+}
+
+header .navegation .navbar .nav-logo a {
+  color: #fff;
+  font-size: 25px;
+}
+
+header .navegation .navbar .nav-logo a span {
+  color: #21d397;
+}
+
+header .navegation .navbar .nav-links {
+  flex-basis: 60%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+header .navegation .navbar .nav-links li.nav-item a {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 15px;
+  margin-right: 35px;
+}
+
+@media (max-width: 768px) {
+  header .navegation .navbar .nav-links li.nav-item a {
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  header .navegation .navbar .nav-links li.nav-item {
+    opacity: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  header .navegation .navbar .nav-links {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    background-color: #45328a;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    padding-bottom: 100px; }
-    @media (max-width: 768px) {
-      header .site-header {
-        display: block;
-        padding-bottom: 0px; } }
-    header .site-header .header-content h2 {
-      font-weight: 500;
-      margin-bottom: 20px;
-      color: #fff; }
-    header .site-header .header-content p {
-      margin-bottom: 30px;
-      color: #fff; }
-    header .site-header .header-content .cta {
-      display: flex;
-      justify-content: flex-start; }
-      header .site-header .header-content .cta .btn {
-        min-width: 160px;
-        font-size: 12px;
-        font-weight: 600;
-        letter-spacing: 1px;
-        padding: 15px 20px;
-        text-align: center;
-        text-transform: uppercase;
-        color: #fff;
-        border-radius: 100px;
-        background: #21d397;
-        margin-right: 25px;
-        transition: all 0.5s ease; }
-        header .site-header .header-content .cta .btn:hover {
-          background-color: #7450fe;
-          box-shadow: 1px 1px 10px #21d398c2; }
-        @media (max-width: 768px) {
-          header .site-header .header-content .cta .btn {
-            min-width: 145px;
-            margin-right: 15px; } }
+    width: 50%;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in;
+    z-index: 1;
+  }
+}
+
+header .navegation .navbar a.btn {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 33px;
+  padding: 0 20px;
+  min-width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  letter-spacing: 1px;
+  transition: all 0.5s ease;
+}
+
+header .navegation .navbar a.btn:hover {
+  background-color: #7450fe;
+}
+
+@media (max-width: 768px) {
+  header .navegation .navbar a.btn {
+    display: none;
+  }
+}
+
+header .navegation .navbar .nav-active {
+  transform: translateX(0%);
+}
+
+header .navegation .navbar .burger {
+  display: none;
+}
+
+header .navegation .navbar .burger div {
+  width: 25px;
+  height: 3px;
+  margin: 3px;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  header .navegation .navbar .burger {
+    cursor: pointer;
+    display: block;
+  }
+}
+
+header .navegation .navbar .toggle .line1 {
+  transform: rotate(-45deg) translate(-6px, 3px);
+}
+
+header .navegation .navbar .toggle .line2 {
+  opacity: 0;
+}
+
+header .navegation .navbar .toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -3px);
+}
+
+header .site-header {
+  padding-top: 30px;
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+@media (max-width: 768px) {
+  header .site-header {
+    display: block;
+    padding-bottom: 0px;
+  }
+}
+
+header .site-header .header-content h2 {
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+header .site-header .header-content p {
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+header .site-header .header-content .cta {
+  display: flex;
+  justify-content: flex-start;
+}
+
+header .site-header .header-content .cta .btn {
+  min-width: 160px;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 15px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  border-radius: 100px;
+  background: #21d397;
+  margin-right: 25px;
+  transition: all 0.5s ease;
+}
+
+header .site-header .header-content .cta .btn:hover {
+  background-color: #7450fe;
+  box-shadow: 1px 1px 10px #21d398c2;
+}
+
+@media (max-width: 768px) {
+  header .site-header .header-content .cta .btn {
+    min-width: 145px;
+    margin-right: 15px;
+  }
+}
 
 main {
-  background: url("/img/bg-about.svg") no-repeat center center/cover; }
+  background: url("/img/bg-about.svg") no-repeat center center/cover;
+}
+
+main .site-main {
+  width: 80%;
+  margin: 5rem auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
   main .site-main {
-    width: 80%;
-    margin: 5rem auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-    align-items: center; }
-    @media (max-width: 768px) {
-      main .site-main {
-        grid-template-columns: 1fr;
-        margin-top: 1rem; } }
-    main .site-main .main-image img {
-      transition: all 1s ease-out;
-      animation: bounce 5s infinite; }
-    main .site-main .main-info a.btn {
-      color: #fff;
-      display: inline-block;
-      border-radius: 50px;
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      padding: 5px 15px;
-      background-color: #4b3da7;
-      transition: all 1.5s ease; }
-      main .site-main .main-info a.btn:hover {
-        background-color: #21d397; }
-    main .site-main .main-info h3 {
-      font-weight: 600;
-      margin: 20px 0 10px;
-      color: #4b3da7; }
-    main .site-main .main-info P {
-      color: #718096;
-      font-weight: 400; }
-    main .site-main .main-info a.learnMore {
-      display: inline-block;
-      font-size: 1rem;
-      color: #718096;
-      font-weight: 400;
-      margin-top: 15px; }
+    grid-template-columns: 1fr;
+    margin-top: 1rem;
+  }
+}
+
+main .site-main .main-image img {
+  transition: all 1s ease-out;
+  animation: bounce 5s infinite;
+}
+
+main .site-main .main-info a.btn {
+  color: #fff;
+  display: inline-block;
+  border-radius: 50px;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 5px 15px;
+  background-color: #4b3da7;
+  transition: all 1.5s ease;
+}
+
+main .site-main .main-info a.btn:hover {
+  background-color: #21d397;
+}
+
+main .site-main .main-info h3 {
+  font-weight: 600;
+  margin: 20px 0 10px;
+  color: #4b3da7;
+}
+
+main .site-main .main-info P {
+  color: #718096;
+  font-weight: 400;
+}
+
+main .site-main .main-info a.learnMore {
+  display: inline-block;
+  font-size: 1rem;
+  color: #718096;
+  font-weight: 400;
+  margin-top: 15px;
+}
 
 footer {
   padding: 80px 0;
   margin-top: 100px;
   background: url("/img/footer-bg.png") no-repeat;
-  background-size: cover; }
-  @media (max-width: 768px) {
-    footer {
-      background-position: center; } }
+  background-size: cover;
+}
+
+@media (max-width: 768px) {
+  footer {
+    background-position: center;
+  }
+}
+
+footer .site-footer {
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  grid-gap: 50px;
+}
+
+@media (max-width: 768px) {
   footer .site-footer {
-    width: 80%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-items: center;
-    grid-gap: 50px; }
-    @media (max-width: 768px) {
-      footer .site-footer {
-        grid-template-columns: 1fr;
-        place-items: self-start; } }
-    footer .site-footer .column .nav-logo {
-      flex-basis: 30%; }
-      footer .site-footer .column .nav-logo a {
-        color: #fff;
-        font-size: 25px; }
-        footer .site-footer .column .nav-logo a span {
-          color: #21d397; }
-    footer .site-footer .column p {
-      margin-bottom: 15px;
-      font-size: 13px;
-      color: #d3cdcd; }
-    footer .site-footer .column .footer-social-info i {
-      font-size: 16px;
-      color: #fff;
-      margin-right: 15px;
-      transition-duration: 500ms; }
-      footer .site-footer .column .footer-social-info i:hover {
-        color: #007bff; }
-    footer .site-footer .column h5 {
-      text-transform: uppercase;
-      font-size: 1.2rem;
-      color: #fff;
-      line-height: 1.4;
-      font-weight: 500; }
-    footer .site-footer .column .navegation-footer ul li a {
-      text-transform: uppercase;
-      color: #d3cdcd;
-      font-size: 14px; }
+    grid-template-columns: 1fr;
+    place-items: self-start;
+  }
+}
+
+footer .site-footer .column .nav-logo {
+  flex-basis: 30%;
+}
+
+footer .site-footer .column .nav-logo a {
+  color: #fff;
+  font-size: 25px;
+}
+
+footer .site-footer .column .nav-logo a span {
+  color: #21d397;
+}
+
+footer .site-footer .column p {
+  margin-bottom: 15px;
+  font-size: 13px;
+  color: #d3cdcd;
+}
+
+footer .site-footer .column .footer-social-info i {
+  font-size: 16px;
+  color: #fff;
+  margin-right: 15px;
+  transition-duration: 500ms;
+}
+
+footer .site-footer .column .footer-social-info i:hover {
+  color: #007bff;
+}
+
+footer .site-footer .column h5 {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: #fff;
+  line-height: 1.4;
+  font-weight: 500;
+}
+
+footer .site-footer .column .navegation-footer ul li a {
+  text-transform: uppercase;
+  color: #d3cdcd;
+  font-size: 14px;
+}
 
 @keyframes navLinkFade {
   from {
     opacity: 0;
-    transform: translateX(50px); }
+    transform: translateX(50px);
+  }
   to {
     opacity: 1;
-    transform: translateX(0px); } }
+    transform: translateX(0px);
+  }
+}
 
 @keyframes bounce {
   0% {
-    transform: translateY(0px); }
+    transform: translateY(0px);
+  }
   50% {
-    transform: translateY(20px); }
+    transform: translateY(20px);
+  }
   100% {
-    transform: translateY(0px); } }
+    transform: translateY(0px);
+  }
+}
+/*# sourceMappingURL=style.css.map */
